// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/searchabledropdown should create a dropdown with a search box for 5 options 1`] = `
<Dropdown
  className="msla-searchable-dropdown"
  multiSelect={true}
  onChange={[Function]}
  onDismiss={[Function]}
  onRenderItem={[Function]}
  options={
    [
      {
        "itemType": 2,
        "key": "FilterHeader",
        "text": "",
      },
      {
        "itemType": 1,
        "key": "FilterDivider",
        "text": "-",
      },
      {
        "key": "foo",
        "text": "Foo",
      },
      {
        "key": "bar",
        "text": "Bar",
      },
      {
        "key": "baz",
        "text": "Baz",
      },
      {
        "key": "qux",
        "text": "Qux",
      },
      {
        "key": "qoz",
        "text": "Qoz",
      },
    ]
  }
  placeholder="Select an option"
  selectedKeys={[]}
/>
`;

exports[`lib/searchabledropdown should create a dropdown without a search box for 3 options 1`] = `
<Dropdown
  className="msla-searchable-dropdown"
  multiSelect={true}
  onChange={[Function]}
  onDismiss={[Function]}
  onRenderItem={[Function]}
  options={
    [
      {
        "key": "foo",
        "text": "Foo",
      },
      {
        "key": "bar",
        "text": "Bar",
      },
      {
        "key": "baz",
        "text": "Baz",
      },
    ]
  }
  placeholder="Select an option"
  selectedKeys={[]}
/>
`;
